Add method to get account details
