# backend/src/routes/dashboard/mod.rs
@@ -1,6 +1,7 @@
 pub mod apps;
 pub mod create_stripe_account;
 pub mod link_stripe_account;
+pub mod stripe_account;
 pub mod submit_app_update;
 
 pub fn dashboard_routes_config(cfg: &mut actix_web::web::ServiceConfig) {
@@ -10,6 +11,7 @@ pub fn dashboard_routes_config(cfg: &mut actix_web::web::ServiceConfig) {
             .service(apps::get_apps)
             .service(create_stripe_account::create)
             .service(link_stripe_account::link)
+            .service(stripe_account::get_stripe_account)
             .service(submit_app_update::submit),
     );
 }
