# backend/src/routes/mod.rs
@@ -21,12 +21,14 @@ pub use users::auth_routes_config;
             apps::recently_updated::recently_updated,
             dashboard::apps::add_app,
             dashboard::apps::get_apps,
+            dashboard::stripe_account::get_stripe_account,
             dashboard::submit_app_update::submit,
         ),
         components(schemas(
             common::models::ComponentSummary,
             common::models::TranslatableString,
             common::models::Icon,
+            common::models::StripeAccount,
             crate::types::dashboard::App,
             crate::types::dashboard::CreateApp,
             crate::types::dashboard::AppUpdateSubmission,
